# sisyphean

./: .gitignore  README.md  docker-compose.yml
backend/app/: Makefile  alembic.ini  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 24640e1dc7b2_add_user_table.py  a727143fad9a_added_todo_table.py
backend/app/app/: main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: todo.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  crud_todo.py
backend/app/app/db/: base.py
backend/app/app/models/: todo.py  user.py
backend/app/app/schemas/: __init__.py  todo.py
backend/app/app/tests/: conftest.py  test_status.py
backend/app/app/tests/api/: test_todo.py
backend/app/app/tests/crud/: test_todo.py  test_user.py
backend/app/app/tests/utils/: todo.py  utils.py
