[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pycheck>=0.1",
    "pytest>=7.2.0",
    "httpx>=0.23.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "fastapi>=0.88.0",
    "uvicorn[standard]>=0.20.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
