[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "httpx>=0.23.1",
    "mypy>=0.991",
    "setuptools>=65.6.3",
]
[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --workers 1"
test = "pytest -s"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "fastapi>=0.88.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=1.10.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}
