[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "httpx>=0.23.1",
    "mypy>=0.991",
    "setuptools>=65.6.3",
    "black>=22.12.0",
    "flake8>=6.0.0",
]
[tool.pdm.scripts]
dev.cmd = "uvicorn app.main:app --reload --workers 1"
dev.env = { POSTGRES_SERVER = "localhost", POSTGRES_PORT = "6432", POSTGRES_USER = "postgres", POSTGRES_PASSWORD = "todo-db-password", POSTGRES_DB = "todo" }
test.cmd = "pytest -s"
test.env = { POSTGRES_SERVER = "localhost", POSTGRES_PORT = "6432", POSTGRES_USER = "postgres", POSTGRES_PASSWORD = "todo-db-password", POSTGRES_DB = "todo" }

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "fastapi>=0.88.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=1.10.3",
    "sqlalchemy>=2.0.0rc1",
    "alembic>=1.9.1",
    "psycopg[binary]>=3.1.7",
]
requires-python = ">=3.11"
license = {text = "MIT"}
